examples/invalid/program56.c
int main() {
    int x;
    x = 5;
    if (!) {
        return 1;
    }
    return 0;
}

